// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack firewall given: [case1] repo with firewall test (ghp_* and AKIA* tokens) when: [t0.1] get --key SAFE_API_KEY (human readable) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.SAFE_API_KEY
      ├─ vault: os.daemon
      ├─ mech: REPLICA
      └─ status: granted 🔑

"
`;

exports[`keyrack firewall given: [case1] repo with firewall test (ghp_* and AKIA* tokens) when: [t0] get --key SAFE_API_KEY (valid api key) then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "test",
    "key": {
      "grade": {
        "duration": "permanent",
        "protection": "plaintext",
      },
      "secret": "sk-safe-api-key-abc123",
    },
    "org": "testorg",
    "slug": "testorg.test.SAFE_API_KEY",
    "source": {
      "mech": "REPLICA",
      "vault": "os.daemon",
    },
  },
  "status": "granted",
}
`;

exports[`keyrack firewall given: [case1] repo with firewall test (ghp_* and AKIA* tokens) when: [t1.1] get --key GHP_TOKEN (human readable) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.GHP_TOKEN
      └─ status: blocked 🚫
         └─ replica mechanism rejects long-lived tokens: detected github classic pat (ghp_*)

"
`;

exports[`keyrack firewall given: [case1] repo with firewall test (ghp_* and AKIA* tokens) when: [t1] get --key GHP_TOKEN (github classic pat) then: stdout matches snapshot 1`] = `
{
  "fix": "update the stored value to use a short-lived or properly-formatted credential",
  "message": "replica mechanism rejects long-lived tokens: detected github classic pat (ghp_*)",
  "slug": "testorg.test.GHP_TOKEN",
  "status": "blocked",
}
`;

exports[`keyrack firewall given: [case1] repo with firewall test (ghp_* and AKIA* tokens) when: [t2] get --key AKIA_TOKEN (aws long-lived access key) then: stdout matches snapshot 1`] = `
{
  "fix": "update the stored value to use a short-lived or properly-formatted credential",
  "message": "replica mechanism rejects long-lived tokens: detected aws long-lived access key (AKIA*)",
  "slug": "testorg.test.AKIA_TOKEN",
  "status": "blocked",
}
`;

exports[`keyrack firewall given: [case1] repo with firewall test (ghp_* and AKIA* tokens) when: [t3] get --for repo then: stdout matches snapshot 1`] = `
[
  {
    "grant": {
      "env": "test",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "sk-safe-api-key-abc123",
      },
      "org": "testorg",
      "slug": "testorg.test.SAFE_API_KEY",
      "source": {
        "mech": "REPLICA",
        "vault": "os.daemon",
      },
    },
    "status": "granted",
  },
  {
    "fix": "update the stored value to use a short-lived or properly-formatted credential",
    "message": "replica mechanism rejects long-lived tokens: detected github classic pat (ghp_*)",
    "slug": "testorg.test.GHP_TOKEN",
    "status": "blocked",
  },
  {
    "fix": "update the stored value to use a short-lived or properly-formatted credential",
    "message": "replica mechanism rejects long-lived tokens: detected aws long-lived access key (AKIA*)",
    "slug": "testorg.test.AKIA_TOKEN",
    "status": "blocked",
  },
]
`;

exports[`keyrack firewall given: [case2] env var contains ghp_* token when: [t0] get --key ALLOWED_KEY with ghp_* env var then: stdout matches snapshot 1`] = `
{
  "fix": "update the stored value to use a short-lived or properly-formatted credential",
  "message": "replica mechanism rejects long-lived tokens: detected github classic pat (ghp_*)",
  "slug": "testorg.test.ALLOWED_KEY",
  "status": "blocked",
}
`;
